@@ -10,7 +10,9 @@ branch must be ported to trunk as well.
 3.27 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fixed AttributeError when deleting a normal file from a meeting.
+  Normal files do not have a contains_pdf method.
+  [maurits]
 
 
 3.26 (2011-10-24)
